# MAA-Meow

./: README.md  README_EN.md  settings.gradle.kts
app/: build.gradle.kts  i18n-verify.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/aliothmoon/maameow/: RemoteService.aidl
app/src/main/assets/: achievements.json  start.sh
app/src/main/java/com/aliothmoon/maameow/: MaaApplication.kt  MainActivity.kt
app/src/main/java/com/aliothmoon/maameow/adb/: AdbClient.kt  AdbException.kt  AdbKey.kt  AdbMdns.kt  AdbMessage.kt  AdbPairingClient.kt  AdbPairingService.kt  AdbProtocol.kt
app/src/main/java/com/aliothmoon/maameow/constant/: MaaFiles.kt  Routes.kt
app/src/main/java/com/aliothmoon/maameow/data/achievement/: AchievementDefinitions.kt  AchievementModels.kt  AchievementRepository.kt  AchievementStates.kt  AchievementTextFormatter.kt
app/src/main/java/com/aliothmoon/maameow/data/config/: MaaPathConfig.kt
app/src/main/java/com/aliothmoon/maameow/data/datasource/: AppDownloader.kt  AssetExtractor.kt  DownloadProgress.kt  ResourceDownloader.kt
app/src/main/java/com/aliothmoon/maameow/data/model/: LogColorRole.kt  LogItem.kt  LogLevel.kt  ReclamationConfig.kt  RecruitTooltipData.kt  TaskTypeInfo.kt
app/src/main/java/com/aliothmoon/maameow/data/preferences/: AppSettingsManager.kt  (+1 more)
app/src/main/java/com/aliothmoon/maameow/koin/: AppModule.kt  UseCaseModule.kt  ViewModelModule.kt
app/src/main/java/com/aliothmoon/maameow/maa/: DriverClass.java
app/src/main/java/com/aliothmoon/maameow/manager/: AdbConnectionManager.kt  PermissionManager.kt  RemoteServiceManager.kt  ShizukuInstallHelper.kt  ShizukuSetupManager.kt
app/src/main/java/com/aliothmoon/maameow/remote/: RemoteServiceImpl.kt
app/src/main/java/com/aliothmoon/maameow/service/: PairingNotificationService.kt
app/src/main/java/com/aliothmoon/maameow/theme/: DesignTokens.kt  LogColors.kt  Theme.kt
app/src/main/jni_shizuku/: CMakeLists.txt  adb_pairing.cpp
app/src/main/native/: CMakeLists.txt  bridge_frame_buffer.cpp
app/src/main/res/drawable/: ic_notification.xml  ic_progress_tracker.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-zh/: strings.xml
docs/: ACHIEVEMENTS.md
docs/en-us/develop/: PULL_REQUEST_GUIDELINES.md
docs/zh-cn/develop/: AUTOMATION.md  BUILDING.md  PULL_REQUEST_GUIDELINES.md  ROADMAP.md  THIRD_PARTY_NOTICES.md
gradle/: libs.versions.toml
others/Shizuku/server/: build.gradle
shizuku/aidl/: build.gradle
shizuku/api/: build.gradle
shizuku/common/: build.gradle
shizuku/provider/: build.gradle
shizuku/rish/: build.gradle
shizuku/server-shared/: build.gradle
shizuku/shared/: build.gradle
shizuku/shell/: build.gradle
shizuku/starter/: build.gradle
(+78 files in other folders)
